# MCVR

./: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/middleware/: com_radiance_client_option_Options.cpp  com_radiance_client_pipeline_Pipeline.cpp  com_radiance_client_proxy_vulkan_RendererProxy.cpp  com_radiance_client_proxy_vulkan_TextureProxy.cpp  com_radiance_client_proxy_world_ChunkProxy.cpp
src/core/render/: chunks.cpp  chunks.hpp  dlss_frame_generation.cpp  dlss_frame_generation.hpp  entities.cpp  pipeline.cpp  pipeline.hpp  render_framework.cpp  render_framework.hpp  renderer.cpp  renderer.hpp  textures.cpp  textures.hpp
src/core/render/modules/: ui_module.cpp  ui_module.hpp
src/core/render/modules/world/: world_module.hpp
src/core/render/modules/world/dlss/: dlss_module.cpp  dlss_module.hpp  dlss_wrapper.cpp  dlss_wrapper.hpp
src/core/render/modules/world/fsr_upscaler/: fsr_upscaler_module.cpp  fsr_upscaler_module.hpp
src/core/render/modules/world/post_render/: post_render_module.hpp
src/core/render/modules/world/ray_tracing/: ray_tracing_module.cpp  ray_tracing_module.hpp
src/core/render/modules/world/ray_tracing/submodules/: atmosphere.hpp  world_prepare.hpp
src/core/render/modules/world/template/: template_module.hpp
src/core/render/modules/world/temporal_accumulation/: temporal_accumulation_module.hpp
src/core/render/modules/world/tone_mapping/: tone_mapping_module.cpp  tone_mapping_module.hpp
src/core/vulkan/: device.cpp  device.hpp  instance.cpp  instance.hpp  swapchain.cpp  swapchain.hpp  vertex.cpp  vertex.hpp
src/shader/util/: environment_fx.glsl  ray_cone.glsl  ray_payloads.glsl  vertex.glsl
src/shader/world/ray_tracing/internal/: clouds.rchit  default.rahit  default.rchit  shadow.rahit  sharc_resolve.comp  world.rgen  world_no_reflect.rchit
src/shader/world/tone_mapping/: tone_mapping.frag
